syntax = "proto3";

package auth.service;
option go_package = "v1/auth";

service AuthenticationService{
    rpc RegisterUser(UserData) returns (JwtToken) {}
    rpc LoginUser(UserData) returns (JwtToken) {}
    rpc GetAllUsers(EmptyRequest) returns (UsersInfo) {}
}

message UserData {
    string username = 2;
    string email = 3;
    string password = 4;
}

message JwtToken{
    string token = 1;
}

message UserInfo{
    string username = 2;
    string email = 3;
}

message UsersInfo {
    repeated UserInfo data = 1;
}

message EmptyRequest {}